--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 
     <title>Aadhaar Authentication - Home</title>
 
-    <!-- PREVENT FLASH -->
+    <!-- PREVENT THEME FLASH -->
     <script>
         (function () {
             if (localStorage.getItem("theme") === "dark") {
@@ -21,68 +21,90 @@
 
 <body>
 
-    <!-- HEADER -->
-    <header>
-        <h1 class="logo">Aadhaar Authentication</h1>
+<!-- UNIVERSAL HEADER -->
+<header>
+    <h1 class="logo">Aadhaar Authentication</h1>
 
-        <div class="header-right">
-            <nav>
-                <a href="index.html" class="active">Home</a>
-                <a href="about.html">About</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+    <div class="header-right">
+        <nav>
+            <a href="index.html" id="nav-home">Home</a>
+            <a href="dashboard.html" id="nav-dashboard">Dashboard</a>
+            <a href="verify-enhanced.html" id="nav-verify">Verify</a>
+            <a href="history.html" id="nav-history">History</a>
+            <a href="analytics.html" id="nav-analytics">Analytics</a>
+            <a href="about.html" id="nav-about">About</a>
+            <a href="services.html" id="nav-services">Services</a>
+            <a href="contact.html" id="nav-contact">Contact</a>
+            <a id="logoutLink" href="#">Logout</a>
+        </nav>
 
-            <!-- ✅ FIXED THEME TOGGLE -->
-            <div class="theme-toggle">
-                <button id="themeBtn" class="theme-btn">🌙</button>
+        <div class="theme-toggle">
+            <button id="themeBtn" class="theme-btn">🌙</button>
 
-                <div id="themeMenu" class="theme-menu hidden">
-                    <div class="theme-option" data-theme="light">☀️ Light Mode</div>
-                    <div class="theme-option" data-theme="dark">🌙 Dark Mode</div>
-                </div>
+            <div id="themeMenu" class="theme-menu hidden">
+                <div class="theme-option" data-theme="light">☀️ Light Mode</div>
+                <div class="theme-option" data-theme="dark">🌙 Dark Mode</div>
             </div>
-            <!-- END TOGGLE -->
         </div>
-    </header>
+    </div>
+</header>
 
-    <!-- MAIN CONTENT -->
-    <main class="main-content">
+<!-- AUTO HIGHLIGHT ACTIVE PAGE -->
+<script>
+    const page = window.location.pathname.split("/").pop();
 
-        <!-- HERO SECTION -->
-        <section class="hero">
-            <h2>AI-Powered Aadhaar Verification</h2>
-            <p>Fast, accurate Aadhaar verification combining YOLO detection, OCR and rule-based checks.</p>
-            <a href="services.html" class="btn">Start Verification</a>
-        </section>
+    const navMap = {
+        "index.html": "nav-home",
+        "dashboard.html": "nav-dashboard",
+        "verify-enhanced.html": "nav-verify",
+        "history.html": "nav-history",
+        "analytics.html": "nav-analytics",
+        "about.html": "nav-about",
+        "services.html": "nav-services",
+        "contact.html": "nav-contact"
+    };
 
-        <!-- FEATURES SECTION -->
-        <section class="features">
-            <div>
-                <h3>Instant Checks</h3>
-                <p>Single or batch verification.</p>
-            </div>
+    if (navMap[page]) {
+        document.getElementById(navMap[page]).classList.add("active");
+    }
+</script>
 
-            <div>
-                <h3>Rule-Based</h3>
-                <p>Verhoeff checksum, name, DOB, gender checks.</p>
-            </div>
+<!-- MAIN CONTENT -->
+<main class="main-content">
 
-            <div>
-                <h3>Exportable</h3>
-                <p>Download results in CSV or JSON.</p>
-            </div>
-        </section>
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <h2>AI-Powered Aadhaar Verification</h2>
+        <p>Fast, accurate Aadhaar verification using YOLO detection, OCR, fraud checks, and smart rule validation.</p>
+        <a href="services.html" class="btn">Start Verification</a>
+    </section>
 
-    </main>
+    <!-- FEATURES SECTION -->
+    <section class="features">
+        <div>
+            <h3>Instant Checks</h3>
+            <p>Single or batch Aadhaar card verification with high accuracy.</p>
+        </div>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>© 2025 Aadhaar Authentication | All Rights Reserved.</p>
-    </footer>
+        <div>
+            <h3>Rule-Based Engine</h3>
+            <p>Includes Verhoeff checksum, DOB, gender, and pattern validation.</p>
+        </div>
 
-    <script src="js/script.js"></script>
+        <div>
+            <h3>Exportable Reports</h3>
+            <p>Download your verification results in JSON or CSV format.</p>
+        </div>
+    </section>
+
+</main>
+
+<!-- FOOTER -->
+<footer>
+    <p>© 2025 Aadhaar Authentication | All Rights Reserved.</p>
+</footer>
+
+<script src="js/script.js"></script>
 
 </body>
-
 </html>
