--- a/frontend/verify-enhanced.html
+++ b/frontend/verify-enhanced.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enhanced Verification - Aadhaar Authentication</title>
 
-    <!-- FIX THEME FLASH -->
+    <!-- FIX THEME FLASH + SESSION CHECK -->
     <script>
         (function () {
             if (localStorage.getItem("theme") === "dark") {
                 document.documentElement.classList.add("dark");
+            }
+        })();
+
+        // SESSION PROTECTION
+        (function () {
+            const user = localStorage.getItem("user_name");
+            if (!user) {
+                window.location.href = "login.html";
             }
         })();
     </script>
@@ -47,10 +55,9 @@
     </div>
 </header>
 
-<!-- AUTO ACTIVE NAV HIGHLIGHT -->
+<!-- AUTO ACTIVE NAV -->
 <script>
     const page = window.location.pathname.split("/").pop();
-
     const navMap = {
         "index.html": "nav-home",
         "dashboard.html": "nav-dashboard",
@@ -61,7 +68,6 @@
         "services.html": "nav-services",
         "contact.html": "nav-contact"
     };
-
     if (navMap[page]) {
         document.getElementById(navMap[page]).classList.add("active");
     }
@@ -123,74 +129,94 @@
 <!-- SweetAlert -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script src="js/config.js"></script>
 <script src="js/script.js"></script>
 
+
 <script>
-    /* ==========================================================
-       IMAGE PREVIEW HANDLER
-    ========================================================== */
-    function previewImage(input, previewBox) {
-        input.addEventListener("change", () => {
-            if (input.files && input.files[0]) {
-                const reader = new FileReader();
-                reader.onload = e => previewBox.innerHTML = `<img src="${e.target.result}" />`;
-                reader.readAsDataURL(input.files[0]);
-            }
-        });
+// IMAGE PREVIEW
+function previewImage(input, previewBox) {
+    input.addEventListener("change", () => {
+        if (input.files && input.files[0]) {
+            const reader = new FileReader();
+            reader.onload = e => previewBox.innerHTML = `<img src="${e.target.result}" />`;
+            reader.readAsDataURL(input.files[0]);
+        }
+    });
+}
+
+previewImage(document.getElementById("previewFrontInput"), document.getElementById("previewFront"));
+previewImage(document.getElementById("previewBackInput"), document.getElementById("previewBack"));
+
+
+// REAL VERIFICATION API CALL (FIXED!!)
+document.getElementById("enhancedForm").addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const frontFile = document.getElementById("previewFrontInput").files[0];
+    const backFile = document.getElementById("previewBackInput").files[0];
+    const qrFlag = document.getElementById("qrCheck").checked;
+
+    if (!frontFile) {
+        Swal.fire("Missing Image", "Please upload the front image.", "warning");
+        return;
     }
 
-    previewImage(document.getElementById("previewFrontInput"), document.getElementById("previewFront"));
-    previewImage(document.getElementById("previewBackInput"), document.getElementById("previewBack"));
+    const formData = new FormData();
+    formData.append("front", frontFile);
+    if (backFile) formData.append("back", backFile);
+    formData.append("qr", qrFlag ? "1" : "0");
 
-    /* ==========================================================
-       MOCK VERIFICATION LOGIC (Local Demo)
-    ========================================================== */
-    document.getElementById("enhancedForm").addEventListener("submit", function (e) {
-        e.preventDefault();
+    Swal.fire({
+        title: "Processing...",
+        text: "Running AI verification",
+        allowOutsideClick: false,
+        didOpen: () => Swal.showLoading()
+    });
 
-        const frontFile = document.getElementById("previewFrontInput").files[0];
+    try {
+        const res = await fetch(`${API_BASE_URL}/api/verify_single`, {
+            method: "POST",
+            body: formData
+        });
 
-        if (!frontFile) {
-            Swal.fire("Missing Image", "Please upload the front image.", "warning");
+        const json = await res.json();
+        Swal.close();
+
+        if (!json.success) {
+            Swal.fire("Error", json.error || "Verification failed.", "error");
             return;
         }
 
-        // Fake verification
-        const result = {
-            status: "Valid",
-            fraud: Math.floor(Math.random() * 10),
-            time: new Date().toLocaleString()
-        };
+        const result = json.result;
 
         document.getElementById("verifyResult").innerHTML = `
             <div class="result-card">
                 <h3>Verification Result</h3>
-                <p>Status: <strong>${result.status}</strong></p>
-                <p>Fraud Score: <strong>${result.fraud}</strong></p>
+                <p>Status: <strong>${result.status || result.overall_assessment || "Unknown"}</strong></p>
+                <p>Fraud Score: <strong>${result.fraud_score ?? "N/A"}</strong></p>
             </div>
         `;
 
-        // Save to localStorage history
+        // SAVE HISTORY (standardized)
         let history = JSON.parse(localStorage.getItem("aadhaar_history") || "[]");
-        history.push(result);
+        history.push({
+            status: result.status || result.overall_assessment || "Unknown",
+            fraud_score: result.fraud_score ?? 0,
+            verification_type: "single",
+            time: new Date().toISOString()
+        });
         localStorage.setItem("aadhaar_history", JSON.stringify(history));
 
         Swal.fire("Verification Complete", "Result saved to history.", "success");
-    });
 
-    /* ==========================================================
-       LOGOUT
-    ========================================================== */
-    document.getElementById("logoutLink").addEventListener("click", (e) => {
-        e.preventDefault();
-
-        localStorage.removeItem("user_name");
-        localStorage.removeItem("user_role");
-
-        Swal.fire("Logged Out", "You have been logged out.", "success")
-            .then(() => window.location.href = "index.html");
-    });
+    } catch (err) {
+        Swal.close();
+        Swal.fire("Error", "Backend unreachable. Check API_BASE_URL.", "error");
+    }
+});
 </script>
+
 
 </body>
 </html>
